examples/errors/programs/error_5.bas
100 print "This is a test" + 5 + "String" + 3
